--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ethereum-sandbox-client",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "license": "AGPL-3.0",
   "main": "client.js",
   "dependencies": {
     "async": "^1.5.2",
