--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ethereum-sandbox-client",
-  "version": "1.0.0",
+  "version": "1.0.0-beta2",
   "license": "AGPL-3.0",
   "main": "client.js",
   "dependencies": {
