--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "client.js",
   "dependencies": {
     "async": "^1.5.2",
-    "ethereum-sandbox": "^1.1.0-beta3",
+    "ethereum-sandbox": "^1.1.2",
     "lodash": "^4.5.1",
     "request": "^2.69.0",
     "sha3": "^1.2.0",
