--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "async": "^1.5.2",
     "ethereum-sandbox": "^1.1.2",
+    "ethereum-sandbox-helper": "^1.0.0-beta5",
     "lodash": "^4.5.1",
     "request": "^2.69.0",
     "sha3": "^1.2.0",
